2009-06-15 Rodrigo Kumpera  <rkumpera@novell.com>

	* class.c (mono_class_from_typeref): If the enclosing type is not
	found return null instead of crashing. Fixes #508487.

2009-06-15  Atsushi Enomoto  <atsushi@ximian.com>

	* normalization-tables.h : updated to the latest unicode charcter
	  data.
	* appdomain.c : bump corlib version.

2009-06-14  Zoltan Varga  <vargaz@gmail.com>

	* class.c (mono_class_from_name): Fix support for assembly references
	in the EXPORTEDTYPE table. Fixes #511704.

2009-06-13  Geoff Norton  <gnorton@novell.com>

	* domain.c: Ensure that mono_domain_assembly_open actually opens the
	assembly in the target domain.

2009-06-12  Robert Jordan  <robertj@gmx.net>

	* cominterop.c (cominterop_get_ccw): Increment mspec's SizeParamIndex
	because "this" of the managed signature has become an
	ordinary parameter in the unmanaged signature.

2009-06-12  Zoltan Varga  <vargaz@gmail.com>

	* class-internals.h (struct _MonoGenericContainer): Add an 'image'
	field for owner-less generic containers.

	* reflection.c (mono_reflection_initialize_generic_parameter): Set the
	image field of the owner-less generic containers created here.

	* metadata.c (mono_metadata_load_generic_params): Ditto, the
	contain is ownerless until the caller sets its owner.

	* metadata.c (type_in_image): Handle owner-less generic containers
	correctly.
	
2009-06-11  Zoltan Varga  <vargaz@gmail.com>

	* image.c (mono_image_close): Support debug_assembly_unload for
	dynamic images too.

2009-06-11 Andrés G. Aragoneses  <aaragoneses@novell.com>

	* class.c: Fix some typos in comments.

2009-06-11  Zoltan Varga  <vargaz@gmail.com>

	* reflection.c (add_custom_modifiers): Avoid reading invalid memory.

	* threads.c (mono_thread_execute_interruption): Avoid creating the
	abort exception object while holding the synch_cs lock.

2009-06-10 Rodrigo Kumpera  <rkumpera@novell.com>

	* metadata-verify.c: Verify basic cattr content.

2009-06-10  Zoltan Varga  <vargaz@gmail.com>
