@@ -1,3 +1,9 @@
+2009-06-16 Rodrigo Kumpera  <rkumpera@novell.com>
+
+	* metadata-verify.c (verify_import_table): The IAT contents
+	might end been patched by the windows DL when running with
+	coree enabled.
+
 2009-06-15 Rodrigo Kumpera  <rkumpera@novell.com>
 
 	* class.c (mono_class_from_typeref): If the enclosing type is not
